--- a/extension-manifest-v2/_locales/es/messages.json
+++ b/extension-manifest-v2/_locales/es/messages.json
@@ -939,7 +939,7 @@
   },
   "name": {
     "description": "The title of this extension (Ghostery).",
-    "message": "Ghostery – Bloqueador de anuncios para privacidad"
+    "message": "Ghostery Rastreador & Bloqueador de anuncios - Privacidad AdBlock"
   },
   "never_consent": {
     "message": "Never-Consent"
