--- a/extension-manifest-v2/_locales/pl/messages.json
+++ b/extension-manifest-v2/_locales/pl/messages.json
@@ -939,7 +939,7 @@
   },
   "name": {
     "description": "The title of this extension (Ghostery).",
-    "message": "Ghostery – Bloker reklam chroniący prywatność"
+    "message": "Ghostery Bloker Trackerów i Reklam - Prywatność AdBlock"
   },
   "never_consent": {
     "message": "Never-Consent"
