--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -266,7 +266,7 @@
     "message": "Let Ghostery be your complete privacy advocate and reject all popups and tracking for you, or do it yourself!"
   },
   "manifest_name": {
-    "message": "Ghostery – Privacy Ad Blocker"
+    "message": "Ghostery Tracker & Ad Blocker - Privacy AdBlock"
   },
   "manifest_short_description": {
     "message": "Ghostery is a powerful privacy extension. Block ads, stop trackers and speed up websites."
