--- a/extension-manifest-v3/src/_locales/es/messages.json
+++ b/extension-manifest-v3/src/_locales/es/messages.json
@@ -266,7 +266,7 @@
     "message": "Permite que Ghostery sea tu defensor de la privacidad y rechace todas las ventanas emergentes y el seguimiento... ¡o hazlo tú personalmente!"
   },
   "manifest_name": {
-    "message": "Ghostery – Bloqueador de anuncios para privacidad"
+    "message": "Ghostery Rastreador & Bloqueador de anuncios - Privacidad AdBlock"
   },
   "manifest_short_description": {
     "message": "Ghostery es una potente extensión para tu privacidad. Bloquea anuncios, detiene rastreadores y acelera sitios web."
