--- a/extension-manifest-v3/src/_locales/it/messages.json
+++ b/extension-manifest-v3/src/_locales/it/messages.json
@@ -266,7 +266,7 @@
     "message": "Lascia che Ghostery difenda la tua privacy e rifiuti tutti i popup e il tracciamento per te, oppure fallo tu stesso!"
   },
   "manifest_name": {
-    "message": "Ghostery – Ad Blocker per la Privacy"
+    "message": "Ghostery Blocco Annunci e Tracker - Privacy AdBlock"
   },
   "manifest_short_description": {
     "message": "Ghostery è una potente estensione per la protezione della privacy. Blocca pubblicità e tracker, e accelera i siti web."
