--- a/extension-manifest-v3/src/_locales/ru/messages.json
+++ b/extension-manifest-v3/src/_locales/ru/messages.json
@@ -266,7 +266,7 @@
     "message": "Позвольте Ghostery стать вашим комплексным защитником конфиденциальности и отклонять за вас все всплывающие окна и отслеживание или делайте это самостоятельно!"
   },
   "manifest_name": {
-    "message": "Ghostery – Конфиденциальный Блокировщик Рекламы"
+    "message": "Ghostery Трекер & Ad Blocker - приватный блокировщик рекламы"
   },
   "manifest_short_description": {
     "message": "Ghostery - это мощное расширение для обеспечения конфиденциальности. Блокируйте рекламу, отключайте средства слежения и ускоряйте загрузку веб-сайтов."
