--- a/extension-manifest-v3/src/_locales/zh_TW/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_TW/messages.json
@@ -266,7 +266,7 @@
     "message": "讓 Ghostery 成為你的全面隱私倡議者，拒絕所有彈出式視窗和追蹤，或者你自己動手！"
   },
   "manifest_name": {
-    "message": "Ghostery – 隱私廣告攔截器"
+    "message": "Ghostery 追蹤器和廣告攔截器 - 隱私 AdBlock"
   },
   "manifest_short_description": {
     "message": "Ghostery是一個強效的隱私擴增功能。攔截廣告、制止追蹤器及加快網頁運行。"
