--- a/extension-manifest-v3/src/_locales/pl/messages.json
+++ b/extension-manifest-v3/src/_locales/pl/messages.json
@@ -266,7 +266,7 @@
     "message": "Pozwól, aby wtyczka Ghostery pełniła funkcję Twojego obrońcy prywatności i odrzucała wszystkie popupy i trackery, lub zajmij się tym sam!"
   },
   "manifest_name": {
-    "message": "Ghostery – Bloker reklam chroniący prywatność"
+    "message": "Ghostery Bloker Trackerów i Reklam - Prywatność AdBlock"
   },
   "manifest_short_description": {
     "message": "Ghostery to potężne rozszerzenie do ochrony prywatności. Blokuje reklamy, wstrzymuje tropiciele i przyspiesza działanie stron internetowych."
