--- a/extension-manifest-v3/src/_locales/zh_CN/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_CN/messages.json
@@ -266,7 +266,7 @@
     "message": "让 Ghostery 成为您的全面隐私权倡导者，并为您拒绝所有弹出窗口和跟踪，或者由您自己做主！"
   },
   "manifest_name": {
-    "message": "Ghostery – 隐私广告拦截工具"
+    "message": "Ghostery 跟踪器和广告拦截器 - 隐私广告拦截器"
   },
   "manifest_short_description": {
     "message": "Ghostery 是强大的隐私保护扩展程序。拦截广告，停止跟踪器，提高网站速度。"
