--- a/extension-manifest-v3/src/_locales/de/messages.json
+++ b/extension-manifest-v3/src/_locales/de/messages.json
@@ -28,6 +28,9 @@
     "message": "Werbung",
     "description": "Tracker category name"
   },
+  "allow_ghostery_in_private_windows": {
+    "message": "Erlaube Ghostery in privaten Fenstern"
+  },
   "always": {
     "message": "Immer"
   },
@@ -119,6 +122,9 @@
   },
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
     "message": "Zeigt den Tracker-Zähler auf dem Ghostery-Symbol in der Browser-Werkzeugleiste an"
+  },
+  "don_t_ask_again": {
+    "message": "Frag nicht noch einmal"
   },
   "done": {
     "message": "Erledigt"
@@ -259,8 +265,14 @@
   "keep_disabled": {
     "message": "Deaktiviert lassen"
   },
+  "learn_how": {
+    "message": "Lernen wie"
+  },
   "learn_more": {
     "message": "Weitere Informationen"
+  },
+  "learn_more_about_youtube_s_challenges_to_ad_blockers": {
+    "message": "Erfahre mehr über die Herausforderungen von YouTube gegenüber Werbeblockern"
   },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Machen Sie Ghostery zum Rundumschutz für Ihre Privatsphäre, der Popups und Tracking ablehnt, oder tun Sie es selbst!"
@@ -331,6 +343,12 @@
   },
   "on_this_website": {
     "message": "auf dieser Website"
+  },
+  "open_video": {
+    "message": "Video öffnen"
+  },
+  "open_youtube_in_a_private_window": {
+    "message": "Open YouTube in a private window"
   },
   "other": {
     "message": "Sonstiges",
@@ -469,8 +487,14 @@
   "urls_observed": {
     "message": "Beobachtete URLs"
   },
+  "visit_our_blog": {
+    "message": "Besuche unseren Blog"
+  },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "Wir haben unsere allgemeinen Geschäftsbedingungen aktualisiert. Um den Ghostery Tracker & Ad Blocker beim Surfen weiterhin nutzen zu können, erneuern Sie bitte die Einrichtung."
+  },
+  "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
+    "message": "We know you rely on Ghostery for a smooth YouTube experience. Until a more refined solution emerges, here’s a temporary fix."
   },
   "website": {
     "message": "Website"
@@ -516,5 +540,8 @@
   },
   "your_privacy_features_": {
     "message": "Ihre Datenschutzfunktionen:"
+  },
+  "youtube_blocking_you_from_watching_ad_free_videos_": {
+    "message": "YouTube hindert dich daran, werbefreie Videos anzusehen?"
   }
 }
