--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -28,6 +28,9 @@
     "message": "Advertising",
     "description": "Tracker category name"
   },
+  "allow_ghostery_in_private_windows": {
+    "message": "Allow Ghostery in private windows"
+  },
   "always": {
     "message": "Always"
   },
@@ -119,6 +122,9 @@
   },
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
     "message": "Displays the tracker count on the Ghostery icon in the browser toolbar."
+  },
+  "don_t_ask_again": {
+    "message": "Don't ask again"
   },
   "done": {
     "message": "Done"
@@ -259,8 +265,14 @@
   "keep_disabled": {
     "message": "Keep disabled"
   },
+  "learn_how": {
+    "message": "Learn how"
+  },
   "learn_more": {
     "message": "Learn more"
+  },
+  "learn_more_about_youtube_s_challenges_to_ad_blockers": {
+    "message": "Learn more about YouTube’s challenges to ad blockers"
   },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Let Ghostery be your complete privacy advocate and reject all popups and tracking for you, or do it yourself!"
@@ -331,6 +343,12 @@
   },
   "on_this_website": {
     "message": "on this website"
+  },
+  "open_video": {
+    "message": "Open video"
+  },
+  "open_youtube_in_a_private_window": {
+    "message": "Open YouTube in a private window"
   },
   "other": {
     "message": "Other",
@@ -469,8 +487,14 @@
   "urls_observed": {
     "message": "URLs observed"
   },
+  "visit_our_blog": {
+    "message": "Visit our blog"
+  },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "We have updated Terms & Conditions. To continue using the Ghostery Tracker & Ad Blocker while browsing, please renew the setup."
+  },
+  "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
+    "message": "We know you rely on Ghostery for a smooth YouTube experience. Until a more refined solution emerges, here’s a temporary fix."
   },
   "website": {
     "message": "Website"
@@ -516,5 +540,8 @@
   },
   "your_privacy_features_": {
     "message": "Your Privacy Features:"
+  },
+  "youtube_blocking_you_from_watching_ad_free_videos_": {
+    "message": "YouTube blocking you from watching ad-free videos?"
   }
 }
