--- a/extension-manifest-v3/src/_locales/it/messages.json
+++ b/extension-manifest-v3/src/_locales/it/messages.json
@@ -28,6 +28,9 @@
     "message": "Pubblicità",
     "description": "Tracker category name"
   },
+  "allow_ghostery_in_private_windows": {
+    "message": "Consenti Ghostery nelle finestre private"
+  },
   "always": {
     "message": "Sempre"
   },
@@ -119,6 +122,9 @@
   },
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
     "message": "Mostra il conteggio dei tracker sull’icona di Ghostery nella barra degli strumenti del browser."
+  },
+  "don_t_ask_again": {
+    "message": "Non chiederlo più"
   },
   "done": {
     "message": "Fatto"
@@ -259,8 +265,14 @@
   "keep_disabled": {
     "message": "Mantieni disabilitato"
   },
+  "learn_how": {
+    "message": "Scopri come"
+  },
   "learn_more": {
     "message": "Ulteriori informazioni"
+  },
+  "learn_more_about_youtube_s_challenges_to_ad_blockers": {
+    "message": "Per saperne di più sulle sfide di YouTube agli ad blocker"
   },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Lascia che Ghostery difenda la tua privacy e rifiuti tutti i popup e il tracciamento per te, oppure fallo tu stesso!"
@@ -331,6 +343,12 @@
   },
   "on_this_website": {
     "message": "su questo sito web"
+  },
+  "open_video": {
+    "message": "Aprire il video"
+  },
+  "open_youtube_in_a_private_window": {
+    "message": "Open YouTube in a private window"
   },
   "other": {
     "message": "Altro",
@@ -469,8 +487,14 @@
   "urls_observed": {
     "message": "URL osservati"
   },
+  "visit_our_blog": {
+    "message": "Visita il nostro blog"
+  },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "Abbiamo aggiornato i Termini e condizioni. Per continuare a usare il Ghostery Tracker & Ad Blocker durante la navigazione, rinnova la configurazione."
+  },
+  "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
+    "message": "We know you rely on Ghostery for a smooth YouTube experience. Until a more refined solution emerges, here’s a temporary fix."
   },
   "website": {
     "message": "Sito web"
@@ -516,5 +540,8 @@
   },
   "your_privacy_features_": {
     "message": "Le tue funzioni privacy:"
+  },
+  "youtube_blocking_you_from_watching_ad_free_videos_": {
+    "message": "YouTube ti blocca la visione dei video senza pubblicità?"
   }
 }
