--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -28,6 +28,9 @@
     "message": "広告",
     "description": "Tracker category name"
   },
+  "allow_ghostery_in_private_windows": {
+    "message": "プライベートウィンドウでGhosteryを許可する"
+  },
   "always": {
     "message": "常に"
   },
@@ -119,6 +122,9 @@
   },
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
     "message": "ブラウザのツールバーのGhosteryアイコンにトラッカー数を表示します。"
+  },
+  "don_t_ask_again": {
+    "message": "二度と聞くな"
   },
   "done": {
     "message": "完了"
@@ -259,8 +265,14 @@
   "keep_disabled": {
     "message": "無効にしておく"
   },
+  "learn_how": {
+    "message": "どのように学ぶ"
+  },
   "learn_more": {
     "message": "詳細はこちら"
+  },
+  "learn_more_about_youtube_s_challenges_to_ad_blockers": {
+    "message": "広告ブロッカーに対するYouTubeの挑戦についてもっと知る"
   },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Ghosteryをプライバシーの完璧な守護者にして、ポップアップやお客様の追跡を全て拒否するか、ご自身で手動設定しましょう!"
@@ -331,6 +343,12 @@
   },
   "on_this_website": {
     "message": "このウェブサイトに対して"
+  },
+  "open_video": {
+    "message": "ビデオを開く"
+  },
+  "open_youtube_in_a_private_window": {
+    "message": "Open YouTube in a private window"
   },
   "other": {
     "message": "その他",
@@ -469,8 +487,14 @@
   "urls_observed": {
     "message": "観察済みURL"
   },
+  "visit_our_blog": {
+    "message": "ブログを見る"
+  },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "利用規約を更新しました。Ghosteryのトラッカー＆広告ブロッカーを引き続きご利用いただくには、セットアップを更新してください。"
+  },
+  "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
+    "message": "We know you rely on Ghostery for a smooth YouTube experience. Until a more refined solution emerges, here’s a temporary fix."
   },
   "website": {
     "message": "ウェブサイト"
@@ -516,5 +540,8 @@
   },
   "your_privacy_features_": {
     "message": "あなたのプライバシーを守る機能:"
+  },
+  "youtube_blocking_you_from_watching_ad_free_videos_": {
+    "message": "YouTubeが広告なし動画の視聴をブロック？"
   }
 }
