--- a/extension-manifest-v3/src/_locales/pl/messages.json
+++ b/extension-manifest-v3/src/_locales/pl/messages.json
@@ -28,6 +28,9 @@
     "message": "Reklama",
     "description": "Tracker category name"
   },
+  "allow_ghostery_in_private_windows": {
+    "message": "Zezwalaj na Ghostery w prywatnych oknach"
+  },
   "always": {
     "message": "Zawsze"
   },
@@ -38,7 +41,7 @@
     "message": "Zastosuj optymalne ustawienia prywatności:"
   },
   "are_you_sure_you_want_to_disable_trackers_preview_": {
-    "message": "Chcesz wyłączyć Podgląd trackerów?"
+    "message": "Chcesz wyłączyć Podgląd Trackerów?"
   },
   "are_you_sure_you_want_to_keep_ghostery_disabled_": {
     "message": "Czy na pewno chcesz, aby Ghostery nadal było nieaktywne?"
@@ -109,7 +112,7 @@
     "message": "Wyłącz"
   },
   "disable_ghostery": {
-    "message": "Dezaktywuj Ghostery"
+    "message": "Wyłącz Ghostery"
   },
   "disable_trackers_preview": {
     "message": "Wyłącz podgląd trackerów"
@@ -119,6 +122,9 @@
   },
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
     "message": "Wyświetla Licznik Trackerów na ikonie Ghostery w pasku narzędzi."
+  },
+  "don_t_ask_again": {
+    "message": "Nie pytaj ponownie"
   },
   "done": {
     "message": "Gotowe"
@@ -137,13 +143,13 @@
     "message": "Włącz teraz blokowanie reklam"
   },
   "enable_ghostery": {
-    "message": "Aktywuj Ghostery"
+    "message": "Włącz Ghostery"
   },
   "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
     "message": "Uaktywnij Ghostery, aby przeglądać strony internetowe bezpieczniej, szybciej i z mniejszą ilością irytujących reklam. "
   },
   "enable_ghostery_to_get_started": {
-    "message": "Aktywuj Ghostery, aby rozpocząć"
+    "message": "Włącz Ghostery, aby rozpocząć"
   },
   "enable_never_consent_": {
     "message": "Chcesz włączyć Never-Consent?"
@@ -199,7 +205,7 @@
     "message": "Ghostery jest nieaktywne"
   },
   "ghostery_is_paused_on_this_site_": {
-    "message": "Ghostery zostało wstrzymane dla tej witryny."
+    "message": "Ghostery jest wstrzymane dla tej witryny."
   },
   "ghostery_paused": {
     "message": "Ghostery wstrzymane"
@@ -232,7 +238,7 @@
     "message": "Ghostery przestanie działać w:"
   },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
-    "message": "Pomóż Ghostery w walce o sieć, w której prywatność będzie podstawowym prawem człowieka."
+    "message": "Pomóż Ghostery w walce o sieć, w której prywatność jest podstawowym prawem człowieka."
   },
   "hey__do_you_enjoy_ghostery_and_want_to_support_our_work_": {
     "message": "Hej, lubisz Ghostery i chcesz wesprzeć naszą pracę?"
@@ -259,8 +265,14 @@
   "keep_disabled": {
     "message": "Pozostaw nieaktywne"
   },
+  "learn_how": {
+    "message": "Dowiedz się jak"
+  },
   "learn_more": {
     "message": "Dowiedz się więcej"
+  },
+  "learn_more_about_youtube_s_challenges_to_ad_blockers": {
+    "message": "Dowiedz się więcej o wyzwaniach YouTube związanych z blokowaniem reklam"
   },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Pozwól, aby wtyczka Ghostery pełniła funkcję Twojego obrońcy prywatności i odrzucała wszystkie popupy i trackery, lub zajmij się tym sam!"
@@ -269,7 +281,7 @@
     "message": "Ghostery – Bloker reklam chroniący prywatność"
   },
   "manifest_short_description": {
-    "message": "Ghostery to potężne rozszerzenie do ochrony prywatności. Blokuje reklamy, wstrzymuje tropiciele i przyspiesza działanie stron internetowych."
+    "message": "Ghostery to potężne rozszerzenie do ochrony prywatności. Blokuje reklamy, zatrzymuje trackery i przyspiesza działanie stron internetowych."
   },
   "menu": {
     "message": "Menu"
@@ -297,10 +309,10 @@
     "message": "Never-Consent"
   },
   "never_consent_is_disabled": {
-    "message": "Never-Consent jest nieaktywny"
+    "message": "Never-Consent jest wyłączony"
   },
   "never_consent_is_enabled": {
-    "message": "Never-Consent jest aktywny"
+    "message": "Never-Consent jest włączony"
   },
   "no": {
     "message": "Nie"
@@ -331,6 +343,12 @@
   },
   "on_this_website": {
     "message": "na tej stronie"
+  },
+  "open_video": {
+    "message": "Otwórz wideo"
+  },
+  "open_youtube_in_a_private_window": {
+    "message": "Otwórz YouTube w prywatnym oknie"
   },
   "other": {
     "message": "Inne",
@@ -379,13 +397,13 @@
     "message": "Zastępuje ikonę Ghostery w pasku narzędzi przeglądarki ikoną koła."
   },
   "report_a_broken_page": {
-    "message": "Zgłoś uszkodzoną stronę"
+    "message": "Zgłoś zepsutą stronę"
   },
   "resume": {
     "message": "Wznów"
   },
   "save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
-    "message": "Zapisz i zsynchronizuj ustawienia niestandardowe pomiędzy przeglądarkami a urządzeniami."
+    "message": "Zapisz i zsynchronizuj ustawienia niestandardowe pomiędzy przeglądarkami i urządzeniami."
   },
   "search_engine_redirect_protection": {
     "message": "Ochrona przekierowywania wyszukiwarki"
@@ -445,7 +463,7 @@
     "message": "Wykryte trackery"
   },
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
-    "message": "Ghostery wykrył trackery śledzące na tej stronie:&nbsp;$${0}"
+    "message": "Ghostery wykryło trackery śledzące na tej stronie:&nbsp;$${0}"
   },
   "trackers_modified": {
     "message": "Zmodyfikowane trackery"
@@ -469,8 +487,14 @@
   "urls_observed": {
     "message": "Zaobserwowane adresy URL"
   },
+  "visit_our_blog": {
+    "message": "Odwiedź nasz blog"
+  },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "Zaktualizowaliśmy Warunki. Żeby nadal korzystać z trackera i blokera reklam Ghostery podczas przeglądania stron, wznów konfigurację."
+  },
+  "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
+    "message": "Wiemy, że polegasz na Ghostery, aby płynnie korzystać z YouTube. Dopóki nie pojawi się bardziej wyrafinowane rozwiązanie, oto tymczasowa poprawka."
   },
   "website": {
     "message": "Witryna"
@@ -491,7 +515,7 @@
     "message": "Jeśli spauzujesz Ghostery na indywidualnej stronie internetowej, ta strona pojawi się tutaj."
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.Me, obsługiwany przez Ghostery, jest integralną częścią technologii anty-śledzenia AI Ghostery. Jest to kompleksowy globalny zasób informacji o trackerach, wprowadzający przejrzystość do śledzenia w sieci."
+    "message": "WhoTracks.Me, obsługiwany przez Ghostery, jest integralną częścią technologii anty-śledzenia AI Ghostery. Jest to kompleksowy globalny zasób informacji o trackerach, wprowadzający przejrzystość w temacie śledzenia w sieci."
   },
   "whotracks_me_statistical_report": {
     "message": "Raport statystyczny WhoTracks.Me"
@@ -516,5 +540,8 @@
   },
   "your_privacy_features_": {
     "message": "Twoje funkcje prywatności:"
+  },
+  "youtube_blocking_you_from_watching_ad_free_videos_": {
+    "message": "YouTube blokuje Ci możliwość oglądania filmów bez reklam?"
   }
 }
