--- a/extension-manifest-v3/src/_locales/pt_BR/messages.json
+++ b/extension-manifest-v3/src/_locales/pt_BR/messages.json
@@ -28,6 +28,9 @@
     "message": "Anúncio",
     "description": "Tracker category name"
   },
+  "allow_ghostery_in_private_windows": {
+    "message": "Permitir o Ghostery em janelas privadas"
+  },
   "always": {
     "message": "Sempre"
   },
@@ -119,6 +122,9 @@
   },
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
     "message": "Exibe a contagem do rastreador no ícone Ghostery na barra de ferramentas do navegador."
+  },
+  "don_t_ask_again": {
+    "message": "Não pergunte novamente"
   },
   "done": {
     "message": "Pronto"
@@ -259,8 +265,14 @@
   "keep_disabled": {
     "message": "Manter desabilitado"
   },
+  "learn_how": {
+    "message": "Saiba como"
+  },
   "learn_more": {
     "message": "Saiba mais"
+  },
+  "learn_more_about_youtube_s_challenges_to_ad_blockers": {
+    "message": "Saiba mais sobre os desafios do YouTube em relação aos bloqueadores de anúncios"
   },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Deixe o Ghostery ser seu defensor completo da privacidade e rejeite todos os pop-ups e rastreamentos para você, ou faça você mesmo!"
@@ -331,6 +343,12 @@
   },
   "on_this_website": {
     "message": "neste site"
+  },
+  "open_video": {
+    "message": "Abrir vídeo"
+  },
+  "open_youtube_in_a_private_window": {
+    "message": "Abrir o YouTube em uma janela privada"
   },
   "other": {
     "message": "Outro",
@@ -469,8 +487,14 @@
   "urls_observed": {
     "message": "URLs observados"
   },
+  "visit_our_blog": {
+    "message": "Visite nosso blog"
+  },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "Atualizamos os Termos e Condições. Para continuar usando o Ghostery Tracker & Ad Blocker durante a navegação, renove a configuração."
+  },
+  "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
+    "message": "Sabemos que você confia no Ghostery para ter uma experiência tranquila no YouTube. Até que surja uma solução mais refinada, aqui está uma correção temporária."
   },
   "website": {
     "message": "Site"
@@ -516,5 +540,8 @@
   },
   "your_privacy_features_": {
     "message": "Seus recursos de privacidade:"
+  },
+  "youtube_blocking_you_from_watching_ad_free_videos_": {
+    "message": "O YouTube está impedindo que você assista a vídeos sem anúncios?"
   }
 }
