--- a/extension-manifest-v3/src/_locales/ru/messages.json
+++ b/extension-manifest-v3/src/_locales/ru/messages.json
@@ -28,6 +28,9 @@
     "message": "Реклама",
     "description": "Tracker category name"
   },
+  "allow_ghostery_in_private_windows": {
+    "message": "Разреши Ghostery в приватных окнах"
+  },
   "always": {
     "message": "Always"
   },
@@ -119,6 +122,9 @@
   },
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
     "message": "Показывает счетчик трекеров у значка Ghostery на панели инструментов в браузере."
+  },
+  "don_t_ask_again": {
+    "message": "Не спрашивай больше"
   },
   "done": {
     "message": "Готово"
@@ -259,8 +265,14 @@
   "keep_disabled": {
     "message": "Не включать"
   },
+  "learn_how": {
+    "message": "Узнай, как"
+  },
   "learn_more": {
     "message": "Подробнее"
+  },
+  "learn_more_about_youtube_s_challenges_to_ad_blockers": {
+    "message": "Узнай больше о том, как YouTube противостоит блокировщикам рекламы"
   },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Позвольте Ghostery стать вашим комплексным защитником конфиденциальности и отклонять за вас все всплывающие окна и отслеживание или делайте это самостоятельно!"
@@ -331,6 +343,12 @@
   },
   "on_this_website": {
     "message": "на этом веб-сайте"
+  },
+  "open_video": {
+    "message": "Открытое видео"
+  },
+  "open_youtube_in_a_private_window": {
+    "message": "Открой YouTube в закрытом окне"
   },
   "other": {
     "message": "Другое",
@@ -469,8 +487,14 @@
   "urls_observed": {
     "message": "Отслеживаемые URL-адреса"
   },
+  "visit_our_blog": {
+    "message": "Посетите наш блог"
+  },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "Мы обновили Условия и положения. Чтобы и дальше использовать Ghostery Tracker & Ad Blocker для просмотра веб-страниц, обновите настройки."
+  },
+  "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
+    "message": "Мы знаем, что ты полагаешься на Ghostery для бесперебойной работы с YouTube. Пока не появится более совершенное решение, вот временное исправление."
   },
   "website": {
     "message": "Website"
@@ -516,5 +540,8 @@
   },
   "your_privacy_features_": {
     "message": "Ваши функции защиты конфиденциальности:"
+  },
+  "youtube_blocking_you_from_watching_ad_free_videos_": {
+    "message": "YouTube блокирует тебе просмотр видео без рекламы?"
   }
 }
