--- a/extension-manifest-v3/src/_locales/zh_CN/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_CN/messages.json
@@ -28,6 +28,9 @@
     "message": "广告",
     "description": "Tracker category name"
   },
+  "allow_ghostery_in_private_windows": {
+    "message": "允许在私人窗口中使用 Ghostery"
+  },
   "always": {
     "message": "始终"
   },
@@ -119,6 +122,9 @@
   },
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
     "message": "在浏览器工具栏中的 Ghostery 图标上显示跟踪器计数。"
+  },
+  "don_t_ask_again": {
+    "message": "别再问了"
   },
   "done": {
     "message": "完成"
@@ -259,8 +265,14 @@
   "keep_disabled": {
     "message": "保持禁用"
   },
+  "learn_how": {
+    "message": "如何学习"
+  },
   "learn_more": {
     "message": "了解详情"
+  },
+  "learn_more_about_youtube_s_challenges_to_ad_blockers": {
+    "message": "进一步了解 YouTube 对广告拦截器的挑战"
   },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "让 Ghostery 成为您的全面隐私权倡导者，并为您拒绝所有弹出窗口和跟踪，或者由您自己做主！"
@@ -331,6 +343,12 @@
   },
   "on_this_website": {
     "message": "在此网站上"
+  },
+  "open_video": {
+    "message": "打开视频"
+  },
+  "open_youtube_in_a_private_window": {
+    "message": "在私人窗口中打开 YouTube"
   },
   "other": {
     "message": "其他",
@@ -469,8 +487,14 @@
   "urls_observed": {
     "message": "观察到的 URL"
   },
+  "visit_our_blog": {
+    "message": "访问我们的博客"
+  },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "我们更新了条款及条件。若要在浏览时继续使用 Ghostery Tracker 和广告拦截工具，请更新设置。"
+  },
+  "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
+    "message": "我们知道，您依赖 Ghostery 来获得流畅的 YouTube 体验。在更完善的解决方案出现之前，这里有一个临时解决方案。"
   },
   "website": {
     "message": "网站"
@@ -516,5 +540,8 @@
   },
   "your_privacy_features_": {
     "message": "您的隐私功能："
+  },
+  "youtube_blocking_you_from_watching_ad_free_videos_": {
+    "message": "YouTube 禁止您观看无广告视频？"
   }
 }
