--- a/extension-manifest-v3/src/_locales/zh_TW/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_TW/messages.json
@@ -28,6 +28,9 @@
     "message": "廣告",
     "description": "Tracker category name"
   },
+  "allow_ghostery_in_private_windows": {
+    "message": "允許在私人視窗中使用 Ghostery"
+  },
   "always": {
     "message": "永遠"
   },
@@ -119,6 +122,9 @@
   },
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
     "message": "在瀏覽器工具列中的 Ghostery 圖示上顯示追蹤器記數。"
+  },
+  "don_t_ask_again": {
+    "message": "不要再問"
   },
   "done": {
     "message": "完成"
@@ -259,8 +265,14 @@
   "keep_disabled": {
     "message": "保持關閉"
   },
+  "learn_how": {
+    "message": "學習如何"
+  },
   "learn_more": {
     "message": "瞭解更多"
+  },
+  "learn_more_about_youtube_s_challenges_to_ad_blockers": {
+    "message": "詳細了解 YouTube 對廣告攔截器的挑戰 不要再問了"
   },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "讓 Ghostery 成為你的全面隱私倡議者，拒絕所有彈出式視窗和追蹤，或者你自己動手！"
@@ -331,6 +343,12 @@
   },
   "on_this_website": {
     "message": "在此網站上"
+  },
+  "open_video": {
+    "message": "打開視頻"
+  },
+  "open_youtube_in_a_private_window": {
+    "message": "在私人視窗中開啟 YouTube"
   },
   "other": {
     "message": "其他",
@@ -469,8 +487,14 @@
   "urls_observed": {
     "message": "已觀察到的 URL"
   },
+  "visit_our_blog": {
+    "message": "造訪我們的博客"
+  },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "我們更新了條款及條件。若要在瀏覽時繼續使用 Ghostery Tracker 和廣告攔截器，請更新設定。"
+  },
+  "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
+    "message": "我們知道您依靠 Ghostery 來獲得流暢的 YouTube 體驗。 在出現更完善的解決方案之前，這裡有一個臨時解決方案。"
   },
   "website": {
     "message": "網站"
@@ -516,5 +540,8 @@
   },
   "your_privacy_features_": {
     "message": "你的隱私功能："
+  },
+  "youtube_blocking_you_from_watching_ad_free_videos_": {
+    "message": "YouTube 阻止您觀看無廣告的影片？"
   }
 }
