Update extension store name (#1386)
Co-authored-by: Dominik Lubański <dominik.lubanski@gmail.com>

--- a/extension-manifest-v3/src/_locales/de/messages.json
+++ b/extension-manifest-v3/src/_locales/de/messages.json
@@ -278,7 +278,7 @@
     "message": "Machen Sie Ghostery zum Rundumschutz für Ihre Privatsphäre, der Popups und Tracking ablehnt, oder tun Sie es selbst!"
   },
   "manifest_name": {
-    "message": "Ghostery – Datenschutzorientierter Werbeblocker"
+    "message": "Ghostery Tracker- & Werbeblocker | Datenschutz AdBlocker"
   },
   "manifest_short_description": {
     "message": "Ghostery ist eine leistungsstarke Datenschutz-Erweiterung. Damit können Sie Werbung blockieren, Tracker stoppen und Websites beschleunigen."
