--- a/extension-manifest-v3/src/_locales/fr/messages.json
+++ b/extension-manifest-v3/src/_locales/fr/messages.json
@@ -278,7 +278,7 @@
     "message": "Laissez Ghostery défendre vos convictions en rejetant les fenêtres surgissantes et mouchards, ou faites-le vous-même !"
   },
   "manifest_name": {
-    "message": "Ghostery – Bloqueur de publicité protégeant la vie privée"
+    "message": "Ghostery Bloqueur de Traqueurs et de Publicités - confidentialité"
   },
   "manifest_short_description": {
     "message": "Ghostery est une puissante extension de protection de la vie privée. Bloquez les publicités, déjouez les outils de pistage et accélérez les sites Web."
