--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -278,7 +278,7 @@
     "message": "Ghosteryをプライバシーの完璧な守護者にして、ポップアップやお客様の追跡を全て拒否するか、ご自身で手動設定しましょう!"
   },
   "manifest_name": {
-    "message": "Ghostery – プライバシー広告ブロッカー"
+    "message": "Ghosteryトラッカー＆広告ブロック - プライバシー広告ブロック"
   },
   "manifest_short_description": {
     "message": "Ghosteryは強力なプライバシー拡張機能です。広告をブロックし、トラッカーを阻止し、ウェブサイトを高速化します。"
