--- a/extension-manifest-v3/src/_locales/pt_BR/messages.json
+++ b/extension-manifest-v3/src/_locales/pt_BR/messages.json
@@ -278,7 +278,7 @@
     "message": "Deixe o Ghostery ser seu defensor completo da privacidade e rejeite todos os pop-ups e rastreamentos para você, ou faça você mesmo!"
   },
   "manifest_name": {
-    "message": "Ghostery – Bloqueador de anúncios para privacidade"
+    "message": "Ghostery Tracker & Ad Blocker - Privacidade AdBlock"
   },
   "manifest_short_description": {
     "message": "O Ghostery é uma poderosa extensão de privacidade. Bloqueie anúncios, interrompa rastreadores e acelere sites."
